# shoccs

./: .gitignore  CLAUDE.md  CMakeLists.txt  ORCHESTRATION_SUMMARY.md  PHASES_1-3_COMPLETE.md  PHASE_4_COMPLETE.md  PYTHON_MIGRATION_PLAN.md  REFERENCE_DATA_QUICKSTART.md  SHOCCS_ARCHITECTURE_AND_KOKKOS_MIGRATION_SPEC.md  ralph_wiggum.sh
.devcontainer/: Dockerfile  spack.yaml
config/: shoccsConfig.cmake.in
docs/: framework_decision_summary.md  python_migration_code_examples.md  python_migration_framework_analysis.md  python_validation_plan.md
docs/handoff/: MASTER.md  completed_plans.md  framework_architecture.md  known_limitations.md  next_steps.md  operating_conventions.md  scientific_findings.md
lua-configs/: brady_livescu_4_3.lua
plans/: 00-foundation.md  01-fields.md  02-matrices.md  03-stencils.md  04-operators.md  05-systems.md  06-temporal.md  07-simulation-io-mms.md  08-registry-and-handles.md  09-field-lifecycle.md  10-expression-templates.md  11-selector-migration.md  12-legacy-removal.md  13-kokkos-parallel.md  14-kokkos-gpu.md  15-code-smells.md  16-parallelize-serial-loops.md  17-kokkos5-upgrade-and-optimization.md  18-cleanup-and-dedup.md  19-performance-measurement.md  20-stencil-derivation-pipeline.md  20.2-interior-stencils.md  20.3-boundary-stencils.md  20.4-codegen.md  20.5-temo-cut-cell.md  21-e4-cut-cell-stencils.md  22-cut-cell-conservation.md  23-e4-correct-dimensions.md  24-uniform-conservation-first.md  25-fix-psi-limits.md  26-e4-conservation-with-zeros.md  27-polynomial-construction.md  29-phs-stencil-investigation.md  30-tension-spline-investigation.md  31-boundary-footprint-investigation.md  32-fix-eigenvalue-test-rerun.md  33-stencil-gen-simplification.md  34-group-velocity-analysis.md  35-group-velocity-cut-cell.md  36-group-velocity-2d.md  (+17 more)
python-migration/: COMPOSITE_OPERATORS_SUMMARY.md  MESH_IMPLEMENTATION_SUMMARY.md  PHASE2_E2_1_COMPLETE.md  PHASE2_REVIEW_REPORT.md  PHASE2_STENCILS_SUMMARY.md  PHASE2_VALIDATION_REPORT.md  PHASE3_APPROVAL.txt  PHASE3_ARCHITECTURE_PLAN.md  PHASE3_SUMMARY.md  PHASE3_TECHNICAL_NOTES.md  PHASE3_VALIDATION_REPORT.md  PHASE4_ARCHITECTURE_PLAN.md  PHASE4_PART1_SUMMARY.md  REVIEW_SUMMARY.md  STENCIL_QUICKSTART.md  VALIDATION_INDEX.md  VALIDATION_SUMMARY.md  demo_operators.py  final_validation_report.py  pytest.ini  test_results.txt  validate_edge_cases.py  validate_phase3.py  verify_mesh.py
scripts/stencil_gen/: pyproject.toml
scripts/stencil_gen/docs/: brady2d_stability_reference.md  group_velocity_reference.md  mfbo_reference.md  optimization_reference.md  sweeps_reference.md
scripts/stencil_gen/output/: E4_1.cpp  E4_1.t.cpp
scripts/stencil_gen/stencil_gen/: bo.py  boundary.py  brady2d_cli.py  brady2d_stability.py  codegen.py  conservation.py  cpp_bridge.py  gks_kreiss.py  group_velocity.py  interior.py  non_normality.py  optimizer.py  pareto.py  phs.py  printer.py  taylor_system.py  temo.py
scripts/stencil_gen/stencil_gen/benchmarks/: brady2d_calibration.py
scripts/stencil_gen/sweeps/: __main__.py  _bo_io.py  _common.py  _pareto_io.py  alpha_extraction.py  bo.py  brady2d_sweep.py  comparison.py  epsilon_sweep.py  footprint_sweep.py  gv_objectives.py  known_values.json  mixed_epsilon_sweep.py  optimize.py  pareto.py  tension_penalty_sweep.py  tension_sweep.py
scripts/stencil_gen/sweeps/pareto_fronts/: E4_classical_layer1_boundary_gv_err__layer_bl42_max_spectral_abscissa.json  E4_tension_layer1_boundary_gv_err__layer_bl42_max_spectral_abscissa.json
scripts/stencil_gen/tests/: conftest.py  test_benchmarks.py  test_bo.py  test_boundary.py  test_brady2d_stability.py  test_codegen.py  test_codegen_e4u.py  test_cpp_bridge.py  test_e4_cut_cell.py  test_gks_kreiss.py  test_group_velocity.py  test_interior.py  test_non_normality.py  test_optimizer.py  test_pareto.py  test_phs.py  test_placeholder.py  test_printer.py  test_sweep_bo.py  test_sweep_gv_objectives.py  test_sweep_pareto.py  test_temo.py
scripts/stencil_gen/tools/: eval_e2_1.py  multimodal_sweep.py
src/: CMakeLists.txt  types.hpp
src/fields/: CMakeLists.txt  algorithms.hpp  algorithms.t.cpp  ccs_range_utils.hpp  container_tuple.hpp  container_tuple.t.cpp  expr.hpp  expr.t.cpp  field.hpp  field.t.cpp  field_fwd.hpp  field_math.t.cpp  field_registry.hpp  field_registry.t.cpp  field_utils.hpp  field_utils.t.cpp  graph_poc.t.cpp  handle.hpp  handle.t.cpp  lazy_views.hpp  range_concepts.t.cpp  scalar.hpp  scalar.t.cpp  selection_desc.hpp  selection_desc.t.cpp  selector.hpp  selector.t.cpp  selector_fwd.hpp  single_view.t.cpp  tuple.hpp  tuple.t.cpp  tuple_fwd.hpp  tuple_math.hpp  tuple_math.t.cpp  tuple_pipe.hpp  tuple_pipe.t.cpp  tuple_utils.hpp  tuple_utils.t.cpp  vector.t.cpp  view_tuple.hpp  (+1 more)
src/matrices/: CMakeLists.txt  block.hpp  block.t.cpp  circulant.cpp  circulant.t.cpp  coefficient_visitor.cpp  coefficient_visitor.t.cpp  csr.cpp  csr.hpp  csr.t.cpp  dense.cpp  dense.hpp  dense.t.cpp  inner_block.t.cpp  unit_stride_visitor.cpp  unit_stride_visitor.hpp  unit_stride_visitor.t.cpp
src/mesh/: CMakeLists.txt  cartesian.hpp  cartesian.t.cpp  mesh.cpp  mesh.hpp  mesh.t.cpp  mesh_view.hpp  mesh_view.t.cpp  object_geometry.cpp  object_geometry.hpp  selections.hpp  selections.t.cpp
tools/: CMakeLists.txt  DELIVERY_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  README.md  build_and_generate.sh  extract_test_data.py  generate_stencil_reference.cpp  stencil_reference_data_minimal.json
(+158 files in other folders)
