[project]
name = "stencil-gen"
version = "0.1.0"
description = "SymPy-based stencil coefficient derivation for SHOCCS"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13",
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
