[project]
name = "stencil-gen"
version = "0.1.0"
description = "SymPy-based stencil coefficient derivation for SHOCCS"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13",
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    # Multi-objective optimization (plan 45): NSGA-II / NSGA-III.
    "pymoo>=0.6",
    # Derivative-free trust-region (BOBYQA) as an alternative to scipy COBYQA
    # for plan 43 and beyond. Requires swig (added to devcontainer Dockerfile).
    "nlopt>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# nlopt has no aarch64 wheels on PyPI. Build from upstream Python-bindings
# source (same codebase that publishes the PyPI wheels). Requires swig + cmake,
# both present in .devcontainer/Dockerfile base-system stage. First-sync build
# cost ~7s; cached on subsequent syncs.
nlopt = { git = "https://github.com/DanielBok/nlopt-python.git", tag = "2.10.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselected by default, use --run-slow to include)",
]
